--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
   - docker run -e CI=true ogandoe/react-test npm run test
 
 after_success:
-  - docker build -t ogandoe/multi-client -f ./client   
-  - docker build -t ogandoe/multi-nginx -f ./nginx
-  - docker build -t ogandoe/multi-server -f ./server
-  - docker build -t ogandoe/multi-worker -f ./worker
+  - docker build -t ogandoe/multi-client -f ./client .   
+  - docker build -t ogandoe/multi-nginx -f ./nginx .
+  - docker build -t ogandoe/multi-server -f ./server .
+  - docker build -t ogandoe/multi-worker -f ./worker .
   - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_ID" --password_stdin
   - docker push ogandoe/multi-client
   - docker push ogandoe/multi-nginx
