travis correccion docker build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,16 @@ services:
 before_install:
   - docker build -t ogandoe/react-test -f ./client/Dockerfile.dev ./client
 
-
 script:
   - docker run -e CI=true ogandoe/react-test npm run test
 
 after_success:
-  - docker build -t ogandoe/multi-client -f ./client .   
-  - docker build -t ogandoe/multi-nginx -f ./nginx .
-  - docker build -t ogandoe/multi-server -f ./server .
-  - docker build -t ogandoe/multi-worker -f ./worker .
+  - docker build -t ogandoe/multi-client  ./client
+  - docker build -t ogandoe/multi-nginx ./nginx
+  - docker build -t ogandoe/multi-server  ./server
+  - docker build -t ogandoe/multi-worker  ./worker
   - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_ID" --password_stdin
   - docker push ogandoe/multi-client
   - docker push ogandoe/multi-nginx
   - docker push ogandoe/multi-server
   - docker push ogandoe/multi-worker
-
