travis correccion docker build

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker build -t ogandoe/multi-nginx ./nginx
   - docker build -t ogandoe/multi-server  ./server
   - docker build -t ogandoe/multi-worker  ./worker
-  - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_ID" --password_stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password_stdin
   - docker push ogandoe/multi-client
   - docker push ogandoe/multi-nginx
   - docker push ogandoe/multi-server
