travis correccion docker build

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,5 @@ after_success:
   - docker push ogandoe/multi-nginx
   - docker push ogandoe/multi-server
   - docker push ogandoe/multi-worker
+
+#comentario
