--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ deploy:
   bucket_name: elasticbeanstalk-sa-east-1-347061874496
   bucket_path: docker-multi-docker
   on:
-    branch: master
+    branch: main
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
